# sdivi-rust

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  DRIFT_LOG.md  INIT_REPORT.md  LICENSE  MIGRATION_NOTES.md  README.md  RELEASING.md  deny.toml  package-lock.json  rustfmt.toml
bindings/sdivi-wasm/: Cargo.toml  README.md  build.sh  package.json
bindings/sdivi-wasm/pkg/: NOTICE  package.json
bindings/sdivi-wasm/pkg-template/: package.json
bindings/sdivi-wasm/src/: assemble_types.rs  category_types.rs  change_coupling.rs  exports.rs  lib.rs  threshold_types.rs  types.rs  weight_keys.rs
bindings/sdivi-wasm/tests/: check_docs.sh  classify_hint_wasm.rs  m22_native.rs  m23_native.rs  normalize_hash_deterministic.rs  test_check_docs.sh  test_negative_integrity.sh  test_wasm_doc_no_unresolved_links.rs  validate_pkg_template.cjs  wasm_smoke.rs  wasm_snapshot.rs  wasm_weighted_leiden.rs
crates/sdi-cli/: Cargo.toml  README.md
crates/sdi-cli/examples/: custom_config.rs  embed_compute.rs  embed_pipeline.rs
crates/sdi-cli/src/: lib.rs  logging.rs  main.rs
crates/sdi-cli/tests/: boundaries_comment_loss_warning.rs  boundaries_show.rs  boundaries_stub.rs  boundary_lifecycle.rs  catalog_format.rs  check_format.rs  check_thresholds.rs  exit_codes.rs  historical_commit_lifecycle.rs  init.rs  lib_target.rs  no_color.rs  release_publish_order.rs  show_format.rs  snapshot_diff.rs  stdout_stderr_split.rs  trend_format.rs  version.rs  workspace_version.rs
crates/sdi-config/: Cargo.toml  README.md
crates/sdi-config/src/: boundary.rs  config.rs  error.rs  lib.rs  load.rs  thresholds.rs
crates/sdi-config/tests/: boundary_roundtrip.rs  config_errors.rs  defaults.rs  precedence.rs  sdi_py_compat.rs  serde_round_trip.rs  threshold_overrides.rs
crates/sdi-core/: Cargo.toml  README.md
crates/sdi-core/src/: error.rs  exit_code.rs  facade.rs  input.rs  lib.rs  pipeline.rs
crates/sdi-core/tests/: compute_change_coupling.rs  compute_pattern_metrics.rs  compute_thresholds_check.rs  compute_topology.rs  exit_code_contract.rs  infer_boundaries.rs  leiden_config_serde.rs  leiden_disconnected.rs  leiden_historical_stability.rs  normalize_and_hash.rs  pipeline_smoke.rs  prop_thresholds.rs  thresholds_input_default_behavior.rs  validate_node_id.rs  wasm_compat.rs
crates/sdi-detection/: Cargo.toml  README.md
crates/sdi-detection/src/: lib.rs  partition.rs  warm_start.rs
crates/sdi-detection/tests/: leiden_id_collision.rs  leiden_quality.rs  leiden_weighted_edges.rs  partition.rs  proptest_seeded.proptest-regressions  proptest_seeded.rs  warm_start.rs
crates/sdi-graph/: Cargo.toml  README.md
crates/sdi-graph/src/: dependency_graph.rs  lib.rs  metrics.rs
crates/sdi-graph/tests/: dependency_graph.rs  metrics.rs
crates/sdi-lang-go/: Cargo.toml  README.md
crates/sdi-lang-go/src/: extract.rs  lib.rs
crates/sdi-lang-go/tests/: extract_behavior.rs
crates/sdi-lang-java/: Cargo.toml  README.md
crates/sdi-lang-java/src/: extract.rs  lib.rs
crates/sdi-lang-java/tests/: extract_behavior.rs
crates/sdi-lang-javascript/: Cargo.toml  README.md
crates/sdi-lang-javascript/src/: extract.rs  lib.rs
crates/sdi-lang-javascript/tests/: extract_behavior.rs
crates/sdi-lang-python/: Cargo.toml  README.md
crates/sdi-lang-python/src/: extract.rs  lib.rs
crates/sdi-lang-python/tests/: extract_behavior.rs
crates/sdi-lang-rust/: Cargo.toml  README.md  build.rs
crates/sdi-lang-rust/src/: extract.rs  lib.rs
crates/sdi-lang-typescript/: Cargo.toml  README.md
crates/sdi-lang-typescript/src/: extract.rs  lib.rs
crates/sdi-lang-typescript/tests/: extract_behavior.rs
crates/sdi-parsing/: Cargo.toml  README.md
crates/sdi-parsing/src/: adapter.rs  feature_record.rs  lib.rs  parse.rs  walker.rs
crates/sdi-parsing/tests/: extract_behavior.rs  full_pipeline.rs  memory_invariant.rs  proptest.rs  walk_ordering.rs
crates/sdi-patterns/: Cargo.toml  README.md
crates/sdi-patterns/src/: catalog.rs  entropy.rs  fingerprint.rs  lib.rs  normalize.rs
crates/sdi-patterns/tests/: determinism.rs  entropy_ordering.rs  prop_normalize.rs  scope_exclude.rs
crates/sdi-pipeline/: Cargo.toml  README.md
crates/sdi-pipeline/src/: boundaries.rs  cache.rs  change_coupling.rs  commit_extract.rs  error.rs  helpers.rs  lib.rs  pipeline.rs  store.rs  time.rs
crates/sdi-pipeline/tests/: change_coupling_git.rs  change_coupling_lifecycle.rs  commit_extract_security.rs  commit_snapshot.rs  parity.rs  path_partition.rs  pipeline_smoke.rs  prop_pipeline.rs  write_boundary_spec.rs
crates/sdi-rust/: Cargo.toml  README.md
crates/sdi-rust/src/: lib.rs  main.rs
crates/sdi-snapshot/: Cargo.toml  README.md
crates/sdi-snapshot/src/: boundary_inference.rs  change_coupling.rs  delta.rs  lib.rs  retention.rs  snapshot.rs  store.rs  trend.rs
crates/sdi-snapshot/tests/: atomic_write.rs  boundary_spec_assembly.rs  compute_trend.rs  delta_pure.rs  infer_boundaries.rs  null_vs_zero.rs  retention.rs  snapshot_load.rs
crates/sdivi-cli/: Cargo.toml  README.md
crates/sdivi-cli/examples/: custom_config.rs  embed_compute.rs  embed_pipeline.rs
crates/sdivi-cli/src/: lib.rs  logging.rs
crates/sdivi-cli/tests/: boundaries_comment_loss_warning.rs  boundaries_show.rs  boundaries_stub.rs  boundary_lifecycle.rs  catalog_format.rs  check_format.rs  check_thresholds.rs  exit_codes.rs  historical_commit_lifecycle.rs  init.rs  lib_target.rs  no_color.rs  release_publish_order.rs  show_format.rs  snapshot_diff.rs  stdout_stderr_split.rs  trend_format.rs  version.rs  workspace_version.rs
crates/sdivi-core/: Cargo.toml  README.md
crates/sdivi-detection/: Cargo.toml  README.md
crates/sdivi-graph/: Cargo.toml  README.md
crates/sdivi-lang-go/: Cargo.toml  README.md
crates/sdivi-lang-java/: Cargo.toml  README.md
crates/sdivi-lang-javascript/: Cargo.toml  README.md
crates/sdivi-lang-python/: Cargo.toml  README.md
crates/sdivi-lang-rust/: Cargo.toml  README.md  build.rs
crates/sdivi-lang-typescript/: Cargo.toml  README.md
crates/sdivi-parsing/: Cargo.toml  README.md
crates/sdivi-patterns/: Cargo.toml  README.md
(+499 files in other folders)
