[workspace]
members = [
    "crates/sdi-rust",
    "crates/sdi-core",
    "crates/sdi-cli",
    "crates/sdi-config",
    "crates/sdi-parsing",
    "crates/sdi-graph",
    "crates/sdi-detection",
    "crates/sdi-patterns",
    "crates/sdi-snapshot",
    "crates/sdi-lang-python",
    "crates/sdi-lang-typescript",
    "crates/sdi-lang-javascript",
    "crates/sdi-lang-go",
    "crates/sdi-lang-java",
    "crates/sdi-lang-rust",
]
resolver = "2"

[workspace.package]
version = "0.0.2"
edition = "2021"
license = "Apache-2.0"
authors = ["Geoff Godwin <geoff.godwin@gmail.com>"]
repository = "https://github.com/geoffgodwin/sdi-rust"

[workspace.dependencies]
# ── internal crates ──────────────────────────────────────────────────────────
sdi-core    = { path = "crates/sdi-core" }
sdi-config  = { path = "crates/sdi-config" }
sdi-parsing = { path = "crates/sdi-parsing" }
sdi-graph   = { path = "crates/sdi-graph" }
sdi-detection = { path = "crates/sdi-detection" }
sdi-patterns  = { path = "crates/sdi-patterns" }
sdi-snapshot  = { path = "crates/sdi-snapshot" }

# ── serialization ────────────────────────────────────────────────────────────
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"      # note: unmaintained upstream; revisit in M10
toml       = ">=0.8, <0.8.20"
# Pin indexmap below 2.14.0 (edition2024) so Cargo 1.75 (MSRV-1 env) can parse the manifest.
# Remove this pin once CI mandates Cargo >= 1.85 in the lock.
indexmap   = ">=2.0, <2.14"

# ── error handling ────────────────────────────────────────────────────────────
thiserror = "2"
anyhow    = "1"

# ── CLI ───────────────────────────────────────────────────────────────────────
clap = { version = ">=4.4, <4.5", features = ["derive"] }

# ── terminal output ───────────────────────────────────────────────────────────
ratatui    = "0.28"
owo-colors = "4"
anstream   = "0.6"

# ── file system / discovery ───────────────────────────────────────────────────
walkdir = "2"
globset = "0.4"
ignore  = "0.4"

# ── concurrency ───────────────────────────────────────────────────────────────
rayon = "1"

# ── graph ─────────────────────────────────────────────────────────────────────
petgraph = "0.6"

# ── parsing ───────────────────────────────────────────────────────────────────
tree-sitter = "0.24"
tree-sitter-python     = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-go         = "0.23"
tree-sitter-java       = "0.23"
tree-sitter-rust       = "0.23"

# ── hashing / fingerprinting ──────────────────────────────────────────────────
blake3     = "1"
twox-hash  = "1"         # xxh3 cache keys

# ── randomness ───────────────────────────────────────────────────────────────
rand = "0.8"

# ── logging / tracing ─────────────────────────────────────────────────────────
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# ── filesystem helpers ────────────────────────────────────────────────────────
dirs     = "5"
tempfile = ">=3.0, <3.20"   # <3.20 avoids getrandom 0.4 (edition2024) on Cargo 1.75

# ── testing ───────────────────────────────────────────────────────────────────
assert_cmd = { version = ">=2.0, <2.1" }
predicates = { version = ">=3.0, <3.1" }
proptest   = "1"
criterion  = { version = "0.5", features = ["html_reports"] }
