[workspace]
members = [
    "crates/sdi-rust",
    "crates/sdi-core",
    "crates/sdi-pipeline",
    "crates/sdi-cli",
    "crates/sdi-config",
    "crates/sdi-parsing",
    "crates/sdi-graph",
    "crates/sdi-detection",
    "crates/sdi-patterns",
    "crates/sdi-snapshot",
    "crates/sdi-lang-python",
    "crates/sdi-lang-typescript",
    "crates/sdi-lang-javascript",
    "crates/sdi-lang-go",
    "crates/sdi-lang-java",
    "crates/sdi-lang-rust",
]
resolver = "2"

[workspace.package]
version = "0.0.10"
edition = "2021"
license = "Apache-2.0"
authors = ["Geoff Godwin <geoff.godwin@gmail.com>"]
repository = "https://github.com/geoffgodwin/sdi-rust"

[workspace.dependencies]
# ── internal crates ──────────────────────────────────────────────────────────
sdi-core     = { path = "crates/sdi-core" }
sdi-pipeline = { path = "crates/sdi-pipeline" }
# default-features = false so crates can opt into features explicitly.
# sdi-config: loader feature gates load_or_default / BoundarySpec::load.
# sdi-graph, sdi-patterns: pipeline-records gates sdi-parsing dep + from-records paths.
# sdi-detection: pipeline-records is empty but listed for uniformity.
# sdi-snapshot: pipeline-records gates tempfile + write/retention FS paths.
sdi-config    = { path = "crates/sdi-config",    default-features = false }
sdi-parsing   = { path = "crates/sdi-parsing" }
sdi-graph     = { path = "crates/sdi-graph",     default-features = false }
sdi-detection = { path = "crates/sdi-detection", default-features = false }
sdi-patterns  = { path = "crates/sdi-patterns",  default-features = false }
sdi-snapshot  = { path = "crates/sdi-snapshot",  default-features = false }
sdi-lang-rust       = { path = "crates/sdi-lang-rust" }
sdi-lang-python     = { path = "crates/sdi-lang-python" }
sdi-lang-typescript = { path = "crates/sdi-lang-typescript" }
sdi-lang-javascript = { path = "crates/sdi-lang-javascript" }
sdi-lang-go         = { path = "crates/sdi-lang-go" }
sdi-lang-java       = { path = "crates/sdi-lang-java" }

# ── serialization ────────────────────────────────────────────────────────────
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml  = "0.0.12"   # maintained fork of serde_yaml (which was archived 2024)
toml       = ">=0.8, <0.8.20"
# Pin indexmap below 2.14.0 (edition2024) so Cargo 1.75 (MSRV-1 env) can parse the manifest.
# Remove this pin once CI mandates Cargo >= 1.85 in the lock.
indexmap   = ">=2.0, <2.14"

# ── error handling ────────────────────────────────────────────────────────────
thiserror = "2"
anyhow    = "1"

# ── CLI ───────────────────────────────────────────────────────────────────────
clap = { version = ">=4.4, <4.5", features = ["derive"] }

# ── terminal output ───────────────────────────────────────────────────────────
ratatui    = "0.28"
owo-colors = "4"
anstream   = "0.6"

# ── file system / discovery ───────────────────────────────────────────────────
walkdir = "2"
globset = ">=0.4.0, <0.4.15"   # <0.4.15 avoids edition2024 on Cargo 1.75
ignore  = ">=0.4.0, <0.4.22"   # pin to avoid potential edition2024 transitive

# ── concurrency ───────────────────────────────────────────────────────────────
rayon      = ">=1, <1.10"   # <1.10 avoids rayon-core 1.13 (rustc 1.80 MSRV) on Cargo 1.75
rayon-core = ">=1, <1.13"   # explicit cap; rayon-core 1.13+ requires rustc 1.80

# ── graph ─────────────────────────────────────────────────────────────────────
petgraph = "0.6"

# ── parsing ───────────────────────────────────────────────────────────────────
# tree-sitter 0.23+ pulls in tree-sitter-language which requires rustc 1.77.
# Pin to 0.22.x (no tree-sitter-language dep) for Cargo 1.75 / rustc 1.75 compat.
tree-sitter          = "0.22"
# Grammar crates: use 0.21.x which targets tree-sitter 0.20-0.22 range.
# Update these to 0.24.x once CI runs on the pinned 1.85 toolchain.
tree-sitter-rust       = "0.21"
# Downgraded from 0.23 to 0.21 for tree-sitter 0.22 compat (no tree-sitter-language dep).
# Update to 0.24.x once CI mandates rustc >= 1.77.
tree-sitter-python     = "0.21"
tree-sitter-typescript = "0.21"
tree-sitter-javascript = "0.21"
tree-sitter-go         = "0.21"
tree-sitter-java       = "0.21"

# ── hashing / fingerprinting ──────────────────────────────────────────────────
blake3     = "1"
twox-hash  = "1"         # xxh3 cache keys

# ── randomness ───────────────────────────────────────────────────────────────
rand = "0.8"

# ── logging / tracing ─────────────────────────────────────────────────────────
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# ── date / time ───────────────────────────────────────────────────────────────
# default-features = false omits clock/std — WASM-compatible. Clock feature is
# opt-in per crate (sdi-cli enables it; sdi-core must not).
chrono = { version = "0.4", default-features = false, features = ["serde"] }

# ── filesystem helpers ────────────────────────────────────────────────────────
dirs     = "5"
tempfile = ">=3.0, <3.20"   # <3.20 avoids getrandom 0.4 (edition2024) on Cargo 1.75

# ── testing ───────────────────────────────────────────────────────────────────
assert_cmd = { version = ">=2.0, <2.1" }
predicates = { version = ">=3.0, <3.1" }
proptest   = "1"
criterion  = { version = "0.5", features = ["html_reports"] }
