[package]
name = "sdivi-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "WASM bindings for the Structural Divergence Indexer — wraps sdivi-core via wasm-bindgen + tsify"

[lib]
crate-type = ["cdylib"]

[dependencies]
sdivi-core          = { workspace = true }
serde             = { workspace = true }
serde_json        = { workspace = true }
wasm-bindgen      = { workspace = true }
tsify             = { workspace = true }
serde-wasm-bindgen = { workspace = true }
js-sys            = { workspace = true }
console_error_panic_hook = { workspace = true }

[dev-dependencies]
wasm-bindgen-test = { workspace = true }
js-sys            = { workspace = true }

# Release profile settings are set at workspace root in Cargo.toml (profile.release-wasm).
