[package]
name = "sdi-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Command-line interface for the Structural Divergence Indexer"

[[bin]]
name = "sdi"
path = "src/main.rs"

[dependencies]
sdi-core   = { workspace = true }
sdi-config = { workspace = true }
clap       = { workspace = true }
anyhow     = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
