[package]
name = "sdi-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Command-line interface for the Structural Divergence Indexer"

[[bin]]
name = "sdi"
path = "src/main.rs"

[dependencies]
sdi-core     = { workspace = true }
sdi-pipeline = { workspace = true }
sdi-config   = { workspace = true, features = ["loader"] }
sdi-parsing  = { workspace = true }
sdi-patterns = { workspace = true, features = ["pipeline-records"] }
sdi-lang-rust       = { workspace = true }
sdi-lang-python     = { workspace = true }
sdi-lang-typescript = { workspace = true }
sdi-lang-javascript = { workspace = true }
sdi-lang-go         = { workspace = true }
sdi-lang-java       = { workspace = true }
clap       = { workspace = true }
anyhow     = { workspace = true }
serde_json = { workspace = true }
chrono     = { workspace = true, features = ["clock"] }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
walkdir = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
sdi-config = { workspace = true }
tempfile   = { workspace = true }
serde_json = { workspace = true }
serde_yml  = { workspace = true }
