[package]
name = "sdi-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Core library for the Structural Divergence Indexer"

[dependencies]
sdi-config = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
