[package]
name = "sdi-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Pure-compute facade for the Structural Divergence Indexer — WASM-compatible, no I/O"

[dependencies]
# All compute crates declared with default-features = false so the
# pipeline-records feature (sdi-parsing dep) is not pulled in.
# This keeps sdi-core free of tree-sitter, walkdir, ignore, rayon, tempfile,
# and std::fs — required for wasm32-unknown-unknown builds.
sdi-config    = { workspace = true, default-features = false }
sdi-graph     = { workspace = true, default-features = false }
sdi-detection = { workspace = true, default-features = false }
sdi-patterns  = { workspace = true, default-features = false }
sdi-snapshot  = { workspace = true, default-features = false }
thiserror     = { workspace = true }
serde         = { workspace = true }
# Clock feature deliberately absent — sdi-core must not call SystemTime::now().
# NaiveDate is in the features = ["serde"] set which is in workspace default.
chrono        = { workspace = true }
tracing       = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
