[package]
name = "sdi-detection"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Native Leiden community detection for sdi-rust"

[dependencies]
sdi-config  = { workspace = true }
thiserror   = { workspace = true }
serde       = { workspace = true }
