[package]
name = "sdi-graph"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Dependency graph construction for sdi-rust"

[features]
# Enables the sdi-parsing dep and build_dependency_graph(records) path.
# Default ON for sdi-pipeline; OFF for sdi-core's WASM-compatible build.
pipeline-records = ["dep:sdi-parsing"]
default = ["pipeline-records"]

[dependencies]
sdi-config  = { workspace = true }
sdi-parsing = { workspace = true, optional = true }
thiserror   = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
petgraph    = { workspace = true }
tracing     = { workspace = true }

[dev-dependencies]
sdi-lang-rust = { path = "../sdi-lang-rust" }
tempfile      = { workspace = true }
