[package]
name = "sdi-lang-go"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Go language adapter for sdi-rust"

[features]
lang-go = []

[dependencies]
sdi-parsing    = { workspace = true }
tree-sitter    = { workspace = true }
tree-sitter-go = { workspace = true }
