[package]
name = "sdi-lang-go"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Go language adapter for sdi-rust"
readme = "README.md"
keywords = ["sdi", "structural-divergence", "tree-sitter", "parsing", "go"]
categories = ["development-tools", "parser-implementations"]

[features]
lang-go = []

[dependencies]
sdi-parsing    = { workspace = true }
tree-sitter    = { workspace = true }
tree-sitter-go = { workspace = true }
