[package]
name = "sdi-lang-java"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Java language adapter for sdi-rust"

[features]
lang-java = []

[dependencies]
sdi-parsing      = { workspace = true }
tree-sitter      = { workspace = true }
tree-sitter-java = { workspace = true }
