[package]
name = "sdi-lang-java"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Java language adapter for sdi-rust"
readme = "README.md"
keywords = ["sdi", "structural-divergence", "tree-sitter", "parsing", "java"]
categories = ["development-tools", "parser-implementations"]

[features]
lang-java = []

[dependencies]
sdi-parsing      = { workspace = true }
tree-sitter      = { workspace = true }
tree-sitter-java = { workspace = true }
