[package]
name = "sdi-lang-javascript"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "JavaScript language adapter for sdi-rust"

[features]
lang-javascript = []

[dependencies]
sdi-parsing            = { workspace = true }
tree-sitter            = { workspace = true }
tree-sitter-javascript = { workspace = true }
