[package]
name = "sdi-lang-javascript"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "JavaScript language adapter for sdi-rust"
readme = "README.md"
keywords = ["sdi", "structural-divergence", "tree-sitter", "parsing", "javascript"]
categories = ["development-tools", "parser-implementations"]

[features]
lang-javascript = []

[dependencies]
sdi-parsing            = { workspace = true }
tree-sitter            = { workspace = true }
tree-sitter-javascript = { workspace = true }
