[package]
name = "sdi-lang-python"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Python language adapter for sdi-rust"
readme = "README.md"
keywords = ["sdi", "structural-divergence", "tree-sitter", "parsing", "python"]
categories = ["development-tools", "parser-implementations"]

[features]
lang-python = []

[dependencies]
sdi-parsing       = { workspace = true }
tree-sitter       = { workspace = true }
tree-sitter-python = { workspace = true }
