[package]
name = "sdi-parsing"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "File discovery and AST parsing stage for sdi-rust"

[dependencies]
sdi-config = { workspace = true }
thiserror  = { workspace = true }
serde      = { workspace = true }
