[package]
name = "sdi-patterns"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Pattern fingerprinting and catalog for sdi-rust"

[dependencies]
sdi-config  = { workspace = true }
thiserror   = { workspace = true }
serde       = { workspace = true }
