[package]
name = "sdi-patterns"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Pattern fingerprinting and catalog for sdi-rust"

[features]
# Enables the sdi-parsing dep and build_catalog(records) path.
# Default ON for sdi-pipeline; OFF for sdi-core's WASM-compatible build.
pipeline-records = ["dep:sdi-parsing"]
default = ["pipeline-records"]

[dependencies]
sdi-config  = { workspace = true }
sdi-parsing = { workspace = true, optional = true }
thiserror   = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
blake3      = { workspace = true }
globset     = { workspace = true }

[dev-dependencies]
serde_json    = { workspace = true }
sdi-parsing   = { workspace = true }
sdi-lang-rust = { workspace = true }
sdi-config    = { workspace = true }
proptest      = { workspace = true }
