[package]
name = "sdi-pipeline"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Orchestration pipeline for the Structural Divergence Indexer — owns FS, clock, and atomic writes"
readme = "README.md"
keywords = ["sdi", "structural-divergence", "pipeline", "metrics", "analysis"]
categories = ["development-tools"]

[dependencies]
sdi-core      = { workspace = true }
# Explicitly enable the features that the orchestration layer requires.
sdi-config    = { workspace = true, features = ["loader"] }
sdi-parsing   = { workspace = true }
sdi-graph     = { workspace = true, features = ["pipeline-records"] }
sdi-detection = { workspace = true, features = ["pipeline-records"] }
sdi-patterns  = { workspace = true, features = ["pipeline-records"] }
sdi-snapshot  = { workspace = true, features = ["pipeline-records"] }
thiserror     = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
tracing       = { workspace = true }
tempfile      = { workspace = true }
chrono        = { workspace = true }

[dev-dependencies]
tempfile      = { workspace = true }
sdi-config    = { workspace = true }
sdi-lang-rust = { workspace = true }
proptest      = { workspace = true }
