[package]
name = "sdi-rust"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Structural Divergence Indexer — install-discovery meta-crate (see sdi-cli for the binary)"
readme = "README.md"
keywords = ["sdi", "structural-divergence", "metrics", "code-analysis", "drift"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "sdi"
path = "src/main.rs"
# The same binary is also produced by sdi-cli (the canonical home of the
# CLI source). Skip rustdoc here so `cargo doc --workspace` does not collide
# on the shared `sdi` doc filename. The binary itself is still built and
# shipped; only its doc output is suppressed.
doc = false

[dependencies]
sdi-core = { workspace = true }
sdi-cli  = { workspace = true }
