[package]
name = "sdi-snapshot"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Snapshot assembly, delta, and persistence for sdi-rust"

[dependencies]
sdi-config  = { workspace = true }
thiserror   = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
